--- a/GccApplication2/Debug/Makefile
+++ b/GccApplication2/Debug/Makefile
@@ -39,6 +39,7 @@ SUBDIRS :=
 C_SRCS +=  \
 ../caixa_inicial.c \
 ../lcd.c \
+../login.c \
 ../main.c \
 ../operacao.c \
 ../serial.c \
@@ -55,6 +56,7 @@ ASM_SRCS +=
 OBJS +=  \
 caixa_inicial.o \
 lcd.o \
+login.o \
 main.o \
 operacao.o \
 serial.o \
@@ -64,6 +66,7 @@ timers.o
 OBJS_AS_ARGS +=  \
 caixa_inicial.o \
 lcd.o \
+login.o \
 main.o \
 operacao.o \
 serial.o \
@@ -73,6 +76,7 @@ timers.o
 C_DEPS +=  \
 caixa_inicial.d \
 lcd.d \
+login.d \
 main.d \
 operacao.d \
 serial.d \
@@ -82,6 +86,7 @@ timers.d
 C_DEPS_AS_ARGS +=  \
 caixa_inicial.d \
 lcd.d \
+login.d \
 main.d \
 operacao.d \
 serial.d \
@@ -110,6 +115,13 @@ LINKER_SCRIPT_DEP+=
 	
 
 ./lcd.o: .././lcd.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+./login.o: .././login.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
